compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__custom_types__phantom.snap
---
source: compiler-core/src/erlang/tests/custom_types.rs
expression: "pub type Map(k, v)"
---
----- SOURCE CODE
pub type Map(k, v)

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export_type([map_/2]).

-type map_(I, J) :: any() | {gleam_phantom, I, J}.
